--- a/BestFlex.Shell/MainWindow.xaml
+++ b/BestFlex.Shell/MainWindow.xaml
@@ -11,6 +11,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
+    // Git test change
 
     <DockPanel>
 
