--- a/BestFlex.Shell/Pages/NewSalePage.xaml
+++ b/BestFlex.Shell/Pages/NewSalePage.xaml
@@ -2,6 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Loaded="UserControl_Loaded">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </UserControl.Resources>
     <Grid>
         <Grid Margin="12">
             <Grid.RowDefinitions>
@@ -70,15 +73,13 @@
                                               SelectedValuePath="Id"
                                               DisplayMemberPath="Display"
                                               IsEditable="True"/>
-                                    <TextBlock Text="{Binding StockText}" Foreground="#666" Margin="8,0,0,0"
-                                               VerticalAlignment="Center"/>
                                 </DockPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
 
                     <!-- Qty -->
-                    <DataGridTextColumn Header="Qty" Binding="{Binding Qty, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N2}}" Width="100"/>
+                    <DataGridTextColumn Header="Qty" Binding="{Binding Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N2}}" Width="100"/>
 
                     <!-- Unit Price -->
                     <DataGridTextColumn Header="Price" Binding="{Binding UnitPrice, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:N2}}" Width="110"/>
@@ -90,7 +91,10 @@
                     <DataGridTemplateColumn Header="" Width="60">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Del" Click="BtnRemoveLine_Click" Style="{StaticResource BtnSecondary}"/>
+                                <Button Content="Delete"
+                                        Command="{Binding DataContext.RemoveLineCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                        CommandParameter="{Binding}"
+                                        Style="{StaticResource BtnSecondary}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
@@ -105,23 +109,40 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                    <Button Content="Add Line" Click="BtnAddLine_Click"/>
+                    <Button Content="Add Line" Command="{Binding AddLineCommand}"/>
                     <Button Content="Add Product" Margin="6,0,0,0" Style="{StaticResource BtnSecondary}"
                             Click="BtnAddProduct_Click"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
                     <TextBlock Text="SubTotal:" VerticalAlignment="Center" Margin="0,0,8,0"/>
-                    <TextBlock x:Name="txtSubTotal" FontWeight="SemiBold" Margin="0,0,16,0"/>
+                    <TextBlock x:Name="txtSubTotal" FontWeight="SemiBold" Margin="0,0,16,0"
+                               Text="{Binding Subtotal, StringFormat={}{0:N2}}" />
                     <TextBlock Text="Items:" VerticalAlignment="Center" Margin="0,0,8,0"/>
-                    <TextBlock x:Name="txtItems" Margin="0,0,16,0"/>
-                    <Button Content="Save" Click="BtnSave_Click"/>
+                    <TextBlock x:Name="txtItems" Margin="0,0,16,0" Text="{Binding ItemsCount, StringFormat={}{0:N0}}" />
+                    <TextBlock Text="{Binding ValidationMessage}"
+                               Foreground="DarkRed" VerticalAlignment="Center" Margin="0,0,16,0">
+                        <TextBlock.Style>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="Visibility" Value="Visible"/>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ValidationMessage}" Value="">
+                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding ValidationMessage}" Value="{x:Null}">
+                                        <Setter Property="Visibility" Value="Collapsed"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBlock.Style>
+                    </TextBlock>
+                    <Button Content="Save" Command="{Binding SaveCommand}" IsEnabled="{Binding CanSave}"/>
                 </StackPanel>
             </Grid>
         </Grid>
 
         <!-- LOADING OVERLAY -->
-        <Grid x:Name="overlay" Background="#66000000" Visibility="Collapsed" IsHitTestVisible="True">
+        <Grid x:Name="overlay" Background="#66000000" Visibility="{Binding IsBusy, Converter={StaticResource BoolToVis}}" IsHitTestVisible="{Binding IsBusy}">
             <Border Width="280" Height="110" CornerRadius="8" Background="White" BorderBrush="#DDD" BorderThickness="1">
                 <StackPanel Margin="16" VerticalAlignment="Center">
                     <TextBlock Text="Working..." FontWeight="SemiBold" Margin="0,0,0,8" HorizontalAlignment="Center"/>
